AX: when text is auto-truncated, accessibility bounds are wrong https://bugs.webkit.org/show_bug.cgi?id=45793

Reviewed by Simon Fraser.

WebCore:

Allow accessibility to retrieve the absoluteQuads of a text node that
clips to the ellipsis.

Test: accessibility/ellipsis-text.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::boundingBoxRect):
* rendering/RenderText.cpp:
(WebCore::ellipsisRectForBox):
    Make a common method to retrieve the ellipsis rect.
(WebCore::RenderText::absoluteQuads):
    Default into the absoluteQuads method that allows for ellipsis clipping.
(WebCore::RenderText::selectionRectForRepaint):
    Use the common method for retrieving the ellipsis.
* rendering/RenderText.h:

LayoutTests:

* accessibility/ellipsis-text-expected.txt: Added.
* accessibility/ellipsis-text.html: Added.



Canonical link: https://commits.webkit.org/58286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67561 268f45cc-cd09-0410-ab3c-d52691b4dbfc