WebCore/rendering/RenderText.h
@@ -62,6 +62,9 @@ public:
     virtual void absoluteQuads(Vector<FloatQuad>&);
     void absoluteQuadsForRange(Vector<FloatQuad>&, unsigned startOffset = 0, unsigned endOffset = UINT_MAX, bool useSelectionHeight = false);
 
+    enum ClippingOption { NoClipping, ClipToEllipsis };
+    void absoluteQuads(Vector<FloatQuad>&, ClippingOption option = NoClipping);
+
     virtual VisiblePosition positionForPoint(const IntPoint&);
 
     const UChar* characters() const { return m_text.characters(); }
